--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,17 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="utf-8">
   <title>Admin - Resumo de Operações</title>
   <base href="/">
 
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <meta name="author" content="">
+  
+
   <link rel="icon" type="imagem/png" href="http://win-vs-esender:5000/Dashboard_Base/img/favicon-32x32.png">
  
 </head>
